displaying API keys on website

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,8 @@
 <html>
     <head><title>Fruit list</title></head>
     <body>
+        Our first API key is: "{{ key_1 }}"
+        Our second API key is: "{{ key_2 }}"
         There are {{ new_fruits | length }} types of fruits.
         <ul>
         {% for fruit in new_fruits %}
